HOCS-5462: add equals and hash code
Add Equals and HashCode method to AdditionalField to allow for Sets to
strip duplicates as by default these use the internal memory address
of the object.